--- a/.github/workflows/docker-image-build-pipeline.yml
+++ b/.github/workflows/docker-image-build-pipeline.yml
@@ -16,3 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Get version from tag
+        id: get_version
+        run: echo "::set-output name=version::$(echo ${{ github.ref }} | sed 's/refs\/tags\/v//')"
