--- a/.github/workflows/docker-image-build-pipeline.yml
+++ b/.github/workflows/docker-image-build-pipeline.yml
@@ -19,10 +19,14 @@ jobs:
 
       - name: Get version from tag
         id: get_version
-        run: echo "::set-output name=tag_name::$(git describe --tags)"
+        run: echo "version=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+      - name: Convert repository owner to lower case
+        id: set_repo_name
+        run: echo "repo_name=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
       - name: Build Docker image
-        run: docker build -t ghcr.io/${{ github.repository }}/my-nginx-image:${{ steps.get_version.outputs.tag_name }} . --no-cache
+        run: docker build -t ghcr.io/${{ steps.set_repo_name.outputs.repo_name }}/nginx-ci-cd:${{ steps.get_version.outputs.version }} . --no-cache
 
       - name: Log into GHCR
         uses: docker/login-action@v2
@@ -32,4 +36,4 @@ jobs:
             password: ${{ secrets.GITHUB_TOKEN}}
 
       - name: Push Docker image
-        run: docker push ghcr.io/${{ github.repository }}/nginx-ci-cd:${{ steps.get_version.outputs.tag_name}}
+        run: docker push ghcr.io/${{ steps.set_repo_name.outputs.repo_name }}/my-image:${{ steps.get_version.outputs.version }}
