--- a/.github/workflows/docker-image-build-pipeline.yml
+++ b/.github/workflows/docker-image-build-pipeline.yml
@@ -36,4 +36,4 @@ jobs:
             password: ${{ secrets.GITHUB_TOKEN}}
 
       - name: Push Docker image
-        run: docker push ghcr.io/${{ steps.set_repo_name.outputs.repo_name }}/my-image:${{ steps.get_version.outputs.version }}
+        run: docker push ghcr.io/${{ steps.set_repo_name.outputs.repo_name }}/nginx-ci-cd:${{ steps.get_version.outputs.version }}
