--- a/.github/workflows/docker-image-build-pipeline.yml
+++ b/.github/workflows/docker-image-build-pipeline.yml
@@ -20,6 +20,13 @@ jobs:
       - name: Get version from tag
         id: get_version
         run: echo "version=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+        
+      - name: Log into GHCR
+        uses: docker/login-action@v2
+        with:
+            registry: ghcr.io
+            username: ${{ github.repository_owner}}
+            password: ${{ secrets.GITHUB_TOKEN}}
 
       - name: Convert repository owner to lower case
         id: set_repo_name
@@ -28,12 +35,10 @@ jobs:
       - name: Build Docker image
         run: docker build -t ghcr.io/${{ steps.set_repo_name.outputs.repo_name }}/nginx-ci-cd:${{ steps.get_version.outputs.version }} . --no-cache
 
-      - name: Log into GHCR
-        uses: docker/login-action@v2
-        with:
-            registry: ghcr.io
-            username: ${{ github.repository_owner}}
-            password: ${{ secrets.GITHUB_TOKEN}}
-
       - name: Push Docker image
         run: docker push ghcr.io/${{ steps.set_repo_name.outputs.repo_name }}/nginx-ci-cd:${{ steps.get_version.outputs.version }}
+
+      - name: Install Minikube
+        run: |
+          curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+          sudo install minikube-linux-amd64 /usr/local/bin/minikub
