--- a/nginx-deployment.yml
+++ b/nginx-deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: ghcr.io/mmellblom/ci-cd-devops3/nginx-ci-cd:latest
+          image: ghcr.io/mmellblom/ci-cd-devops3/nginx-ci-cd:v1.8.0
           ports:
             - containerPort: 80
 ---
@@ -23,7 +23,7 @@ kind: Service
 metadata:
   name: nginx-service
 spec:
-  type: nodePort
+  type: NodePort
   selector:
     app: nginx
   ports:
