--- a/.github/workflows/docker-image-build-pipeline.yml
+++ b/.github/workflows/docker-image-build-pipeline.yml
@@ -20,6 +20,15 @@ jobs:
       - name: Get version from tag
         id: get_version
         run: echo "version=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+      - name: Set image tag environment variable
+        run: echo "IMAGE_TAG=${{ steps.get_version.outputs.version }}" >> $GITHUB_ENV
+      
+      - name: Send variable to playbook
+        uses: ansible/ansible-playbook@v1
+        with:
+          playbook: deploy-playbook.yml
+          extra_vars: image_tag=${{ env.IMAGE_TAG }}
         
       - name: Log into GHCR
         uses: docker/login-action@v2
